--- a/src/app/components/business/Header/header.module.scss
+++ b/src/app/components/business/Header/header.module.scss
@@ -13,6 +13,10 @@
         height: 40px;
         width: 200px;
         border: 1px solid silver;
+
+        &:hover {
+            box-shadow: 2px -1px 11px -7px rgba(0,0,0,0.86);
+        }
     }
 
     &__active {
