--- a/src/app/layouts/globalLayout.css
+++ b/src/app/layouts/globalLayout.css
@@ -6,3 +6,10 @@
 body {
     font-family: sans-serif;
 }
+
+.content {
+    border: 1px solid black;
+    height: calc(100vh - 300px);
+    margin: 80px 80px 0 80px;
+    padding: 40px;
+}
