update modal css

--- a/src/app/components/business/Users/CustomModal/customModal.module.scss
+++ b/src/app/components/business/Users/CustomModal/customModal.module.scss
@@ -63,6 +63,7 @@
             height: 35px;
             border-radius: 5px;
             padding: 10px;
+            font-size: 16px;
         }
     }
 
