--- a/src/app/components/business/Header/header.module.scss
+++ b/src/app/components/business/Header/header.module.scss
@@ -21,5 +21,10 @@
 
     &__active {
         background-color: silver;
+        cursor: default;
+
+        &:hover {
+            box-shadow: none;
+        }
     }
 }
