--- a/src/app/components/business/Users/users.module.scss
+++ b/src/app/components/business/Users/users.module.scss
@@ -4,7 +4,12 @@
         justify-content: space-between;
         margin-top: 30px;
 
-        &_filters {
+        &_filtersIcon {
+            cursor: pointer;
+
+            &:hover {
+                opacity: 0.8;
+            }
         }
     }
 }
